--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="/icon-167x167.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/icon-180x180.png">
     <link rel="icon" href="/favicon.ico" />
-    <title>React.js Boilerplate</title>
+    <title>Typhoon</title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
